--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -223,9 +223,74 @@ class House{
 
 ## 组合 Composite
 
-将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性。
 
-![image-20200907094120213](image.assets/image-20200907094120213.png)
+
+将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性
+
+
+
+![](image.assets/组合模式.png)
+
+
+
+
+
+```java
+public class Compoment {
+
+    public static void main(String[] args) {
+        Composite china = new Composite();
+
+        Composite zj = new Composite();
+        zj.add(new City(1000));
+
+        Composite jx = new Composite();
+        jx.add(new City(500));
+
+        //将子节点加入容器(子节点本身也可以是一个容器)
+        china.add(zj);
+        china.add(jx);
+
+        china.count();
+    }
+}
+
+interface Counter {
+    int count();
+}
+
+class City implements Counter {
+
+    private int sum;
+
+    public City(int sum) {    this.sum = sum;}
+
+    @Override
+    public int count() {    return sum;}
+}
+
+//容器和节点都需要实现接口
+class Composite implements Counter {
+
+    private List<Counter> list = new ArrayList<>();
+
+    public void add(Counter counter) {    list.add(counter);}
+
+    public void delete(Counter counter) {   list.remove(counter);}
+
+    public List<Counter> getChild() {   return list;}
+
+    @Override
+    public int count() {
+        int sum = 0;
+        for (Counter counter : list) {
+            //在子节点是容器时,count()将进行递归
+            sum += counter.count();
+        }
+        return sum;
+    }
+}
+```
 
 
 
