--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -597,13 +597,27 @@ K的个数称为阶,用M表示
 
 
 
-磁盘由盘片构成,每个盘片有两面，又称为盘面 。盘片中央有一个可以旋转的主轴，他使得盘片以固定 的旋转速率 旋转，一个磁盘中包含了多个这样的盘片并封装在一个密 封的容器内 。盘片的每 个表面是由一组称为磁道同心圆组成的 ，每个磁道被划分为了一组扇区 ，每个 扇区包含相等数量的数据位，通常 是512个子节，扇区之间由一些间隙隔开,这些间隙中不存储数据 。
+磁盘由盘片构成,每个盘片有两个盘面
 
-​	MySQL数据以文件的形式存储到硬盘。而读取数据靠机械臂运动,分为寻道时间、旋转延迟、传输时间三个部分,寻道和旋转花费时间长.
+盘片中央有一个可以旋转的主轴，他使得盘片以固定的旋转速率旋转
 
-​	计算机操作系统做了一些优化，一次IO会把相邻的数据也都读取到内存缓冲区内，==空间局部性原理==告诉我们，访问一个地址时，其相邻的地址大概率也会被访问到。每一次IO读取的数据我们称之为一页,读取一页的数据，才发生一次IO（包括当前数据+相邻数据）
+盘面由磁道同心圆组成的 ，每个磁道被划分扇区 ，每个扇区包含相等数量的数据位，通常是512字节，扇区之间由一些间隙隔开,这些间隙中不存储数据。
 
-​	每次查数据时减少磁盘IO次数,**需要稳定的数据结构**
+
+
+MySQL数据以文件的形式存储到硬盘。而读取数据靠机械臂运动,分为寻道时间、旋转延迟、传输时间三个部分,寻道和旋转花费时间长.
+
+计算机操作系统做了一些优化，一次IO会把相邻的数据也都读取到内存缓冲区内，==空间局部性原理==:访问一个地址时，其相邻的地址大概率也会被访问到。每一次IO称为读取一页的数据（包括当前数据+相邻数据）
+
+
+
+稳定的数据结构 -> 减少IO次数 -> 查询变快
+
+
+
+* hashmap	无序,查数据需要遍历	不支持范围查询
+
+
 
 * 红黑树
   * 高度不可控,**逻辑上很近的节点实际很远**，无法很好的利用磁盘预读（局部性原理）
@@ -614,7 +628,7 @@ K的个数称为阶,用M表示
 
 
 * B-树
-  * ==不支持范围搜索==
+  * ==不支持范围搜索==,只能中序遍历
   * 非叶子节点也存储数据,导致存储索引的数量变少
 
 **所以B-不能用于索引**
@@ -622,11 +636,14 @@ K的个数称为阶,用M表示
 
 
 * B+树
-  * 节点存储着多个id（以磁盘的角度可以看作磁盘块）,多路查找,优于二叉树
-  * 非叶子节点只存储key,一次IO能取出更多索引
-  * 每次将范围分割为多个区间，区间越多，定位数据越快,区间对应存储器上的一页
+  * 节点存储多个id,多路查找优于二叉树
+  * 非叶子节点只存储key,不包含data -> 一次IO能取出更多索引
+  * 每个节点包含的关键字多 -> 树的高度低 -> IO次数少
+  * 支持范围查询,==叶子结点被链表连接==,通过链表提高了区间访问性
 
-B树每个节点包含的关键字多，应用到数据库中的时，能够充分利用磁盘的块式存储原理,把节点大小限制在块大小范围；把树的关键字多,**层级比二叉树小**，能够减少查找的次数和复杂度
+
+
+
 
 
 
