--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -9,7 +9,7 @@
 
 
 
-## 简单工厂/静态工厂
+## 简单/静态工厂
 
 
 
@@ -1083,6 +1083,10 @@ class B {
 1、 行为随状态改变而改变的场景；
 
 2、 业务含有庞大的分支结构，并且这些分支取决于对象的状态
+
+
+
+![](image.assets/状态模式.gif)
 
 
 
