--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1,7 +1,7 @@
 |          | 创建型模式            |             结构型模式             | 行为型模式                                         |
 | -------- | --------------------- | :--------------------------------: | -------------------------------------------------- |
 | 类模式   | 工厂方法              |                适配                | 模板方法 解释器                                    |
-| 对象模式 | 单例 原型 抽象 建造者 | 适配 代理 桥接 装饰 外观 享元 组合 | 策略 命令 职责链 状态 观察 中介 迭代 访问者 备忘录 |
+| 对象模式 | 单例 原型 抽象 建造者 | 适配 代理 桥接 装饰 外观 享元 组合 | 策略 命令 责任链 状态 观察 中介 迭代 访问者 备忘录 |
 
 
 
