--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -13,7 +13,7 @@
 
 
 
-根据传入的参数，动态决定应该创建哪个产品子类的实例，**以父类形式返回**
+根据传入的参数，动态决定创建哪个产品子类的实例，**以父类形式返回**
 
 可以根据条件生成不同的子类实例，这些子类有一个公共的抽象父类并且实现了相同的方法，但是这些方法针对不同的数据进行了不同的操作（多态）。 当得到子类的实例后，开发人员可以调用基类中的方法而不必考虑到底返回的是哪一个 子类的实例
 
@@ -22,7 +22,7 @@
 ![](image.assets/image-20200817095352502.png)
 
 * 优点
-  * 客户端不负责对象的创建，而是由专门的工厂类完成；
+  * 客户端不负责对象的创建，而是由专门的工厂类完成
   * 客户端只负责对象的调用，实现了**创建和调用分离**，降低了客户端代码的难度
 
 * 缺点
@@ -31,7 +31,7 @@
 
 
 
-简单工厂用来生产**同一等级结构**中的任意产品。（**不支持增加**产品）
+简单工厂用来生产**同一等级结构**中的任意产品（**不支持增加**产品）
 
 只有伦敦工厂，并且这个工厂只生产三种类型的pizza：chesse,pepper,greak（固定产品）。
 
@@ -70,6 +70,8 @@ public interface Collection<E> extends Iterable<E> {
 
 
 ## 抽象工厂
+
+
 
 提供一个创建产品族的接口，用来生产不同产品族的全部产品。（**支持增加产品/产品族**）  
 
@@ -300,9 +302,7 @@ class Composite implements Counter {
 
 
 
-
-
-- target（目标接口）:所要转换的所期待的接口
+- Target（目标接口）:所要转换的所期待的接口
 - Adaptee（源角色）：被适配类
 - Adapter（适配器）：将源角色适配成目标接口，一般持有源接口的引用/继承源接口，且实现目标接口
 
@@ -348,9 +348,9 @@ class Adapter implements Translator {
 
 
 
-适配器目的是从一个接口转变为另一个接口,修改了原接口,对于操作对象，经过一次适配之后，基本上就是不同的东西了
+适配器目的是从一个接口转变为另一个接口,**修改了原接口**
 
-装饰器未对原接口进行修改,只增强原有对象的功能,或改变原有对象的处理方式而提升性能,强调增强，经过装饰后，操作对象的原有功能依然存在，并且添加了一些更多的功能
+装饰器**未对原接口进行修改**,增强/改变原有对象的处理方式而提升性能，经过装饰后，操作对象的原有功能依然存在，并添加额外的功能
 
 
 
@@ -416,7 +416,7 @@ IO流大量运用装饰器模式,直接继承了InputStream的子类有
 * StringBufferInputStream
 * ==FilterInputStream==
 
-![image-20200907094120213](image.assets/inputStream继承关系.png)
+![](image.assets/inputStream继承关系.png)
 
 FilterInputStream与其它子类不同
 
@@ -459,7 +459,7 @@ public synchronized int read() throws IOException {
     return getBufIfOpen()[pos++] & 0xff;}
 ```
 
-BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能==,使得FileInputStream带有了缓冲功能
+BufferedInputStream是装饰器，==为InputStream加上缓冲功能==,使得FileInputStream带有了缓冲功能
 
 ```java
 new BufferedInputStream(new FileInputStream(new File("")));
@@ -531,7 +531,7 @@ class SubFlow2{ void method2(){}}
 
 运用共享,支持大量细粒度对象复用
 
-![image-20200907094120213](image.assets/享元模式.jpg)
+![](image.assets/享元模式.jpg)
 
 * 优点
   * 减少相同或相似对象的创建,节约资源
@@ -1358,7 +1358,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 设计模式是面向对象设计原则的经典应用
 
-**开闭是面向对象设计的终极目标**。其他设计原则都可以看作是开闭原则的实现手段或方法
+**开闭是面向对象设计的终极目标**。其他都是开闭的实现手段
 
 
 
@@ -1368,7 +1368,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 设计目的单一的类
 
-高内聚	一个代码只完成一项功能
+高内聚	一个代码完成一项功能
 模块化	模块可以轻易地拿到其他系统中使用
 
 
@@ -1386,7 +1386,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-**依赖抽象,而不是具体实现,面向接口编程,不根据实现编程**
+**依赖抽象而不是实现,面向接口编程,不面向实现**
 
 声明类型时，尽可能使用抽象类型，可以被子类型替代
 
@@ -1396,7 +1396,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-任何时候都可以用子类型替换掉父类型。子类一定是增加父类的能力而不是减少父类的能力
+任何时候都可以用子类型替换掉父类型。子类一定是增加而不是减少父类的能力
 
 
 
@@ -1404,7 +1404,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-多个专门的接口比使用单一的总接口更好
+多个专门的接口比单一的总接口更好
 
 接口小而专,高度内聚
 
@@ -1432,7 +1432,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-对象之间尽可能少的了解,不要和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
+对象间尽可能少的了解,不和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
 
 “低耦合”，门面模式和调停者模式就是对迪米特法则的践行
 
@@ -1719,18 +1719,18 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 * 内聚
 
-  * 偶然内聚	各个处理元素之间没有任何联系
+  * 偶然内聚	处理元素间没有联系
   * 逻辑内聚	执行逻辑上相似的功能，**通过参数确定完成哪个功能**
   * 时间内聚	**同时执行的动作组合在一起**
-  * 通信内聚	所有处理元素在**同一个数据结构**上操作，或各处理使用**相同的输入/输出数据**
+  * 通信内聚	所有处理元素在**同一数据结构**上操作，或使用**相同的输入/输出数据**
   * 顺序内聚	==前一个功能元素的输出是下一个功能元素的输入==
   * 功能内聚	==最强的内聚==，所有元素**共同完成一个功能，缺一不可**
 
 * 耦合
 
-  * 数据耦合:两个模块彼此间通过数据**参数**交换信息
+  * 数据耦合:模块间通过数据**参数**交换信息
   * 标记耦合:通过**参数表(某种数据结构**)传递信息
-  * 控制耦合:两个模块彼此间传递的信息中有控制信息
+  * 控制耦合:模块间传递的信息中有控制信息
   * 内容耦合:涉及到另一个模块的内部信息
 
 
