--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -294,7 +294,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-借助了2-3树的思想
+借助了2-3树思想
 
 将3-结点表示为由一条左斜红链接(两个2-结点其中之一是另一个的左子结点)相连的两个2-结点
 
@@ -310,7 +310,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-<img src="image.assets/2-3树转红黑.png" style="zoom:50%;" /> 变为 <img src="image.assets/红黑.png" style="zoom: 50%;" />
+<img src="image.assets/2-3树转红黑.png" style="zoom:50%;" />  变为  <img src="image.assets/红黑.png" style="zoom: 50%;" />
 
 
 
@@ -320,10 +320,10 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
   * **没有结点同时和两条红链接相连**(不存在4-结点)
 * **完美黑色平衡**
   * 任意空链接到根结点,路径上的黑链接数量相同
-  * 任意结点到叶子结点,路径上的黑结点数量相同
+  * 任意结点到叶子(包括NIL)结点,路径上的黑结点(包括NIL)数量相同
   * **整体并不完美平衡**
 
-* 根/叶子节点黑
+* **根/叶子(NIL空节点)黑**
 * 不能有两个连续红
 
 
@@ -340,14 +340,15 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 以某个结点作为支点，其右变为父，右结点的左变为旋转结点的右，左子树不变
 
-==旋转之后,变色==
-
+==旋转后,变色==
 
 
 
 **左旋**只影响**旋转结点以下**的结构，把旋转结点的左子树移到根节点,作为根节点右子树
 
-==局部的旋转==,当一边子树的结点少了，那么向另外一边子树“借”一些结点；当一边子树的结点多了，那么向另外一边子树“租”一些结点
+==局部旋转==,当一边子树的结点少了，向另外一边子树“借”结点
+
+
 
 
 
@@ -355,9 +356,11 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-红黑树总保持黑色完美平衡，所以它的查找最坏时间复杂度为O(2lgN)，也即整颗树刚好红黑相隔的时候
+红黑树总保持黑色完美平衡，查找最坏时间复杂度为O(2lgN)，即整颗树刚好红黑相隔的时候
 
-![](image.assets/平衡二叉树查找.png)
+
+
+<img src="image.assets/平衡二叉树查找.png" style="zoom:50%;" />
 
 
 
@@ -375,30 +378,23 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 ==插入时初始红色==
 
-* 空树
+* 空树	直接插入,变黑
 
-  * 直接插入,变黑
-
-* 插入结点的Key已存在
-
-  * 更新值,变为原结点颜色
+* 插入结点的Key已存在   更新值,变为原结点颜色
 
 * 插入的父结点 黑
 
   * 直接插入    红色插入黑色时，不影响平衡
 
-* 插入的**父结点 红		代表必定还有祖父结点,祖父黑,需要考虑旋转**
+* 插入的**父结点 红		必存在黑祖父,需要考虑旋转**
   * 叔叔结点 红![](image.assets/叔叔结点 红.png)
-    * 父/叔变黑,祖父变红 -> **把祖父视为当前插入结点,再次进行插入平衡处理**
-      * 祖父就是根节点的话,祖父变黑,此时红黑结构：黑黑红,**是唯一增加黑色结点层数的插入情景**
+    * 父/叔变黑,祖父变红 -> **把祖父视为当前插入结点,自底向上平衡**
+      * 祖父就是根节点的话,祖父变黑,此时结构：黑黑红(唯一增加黑色结点层数的插入情景)
       * 这也说明了**红黑树自底向上生长**，普通的二叉查找树自顶向下生长
   * 叔叔 黑/不存在,父是祖父的左子结点
     * 插入结点是其父结点的左子结点![](image.assets/红黑插入父左.png)
-      * 父/插入结点黑,祖父红 -> 右旋   (这里可以让插入节点为红,父/祖父黑,但这将导致自底向上的平衡,不如变黑,最小化地局部平衡)
+      * 父黑,祖父红 -> 右旋
     * 插入结点是其父结点的右子结点
-  * 叔叔 黑/不存在,父亲是祖父的右子结点
-    * 插入结点是其父结点的左子结点![](image.assets/红黑插入父右.png)
-      * 父/插入节点黑,祖父红 -> 左旋
 
 
 
@@ -416,11 +412,9 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+
+
 ### 删除
-
-
-
-
 
 
 
@@ -438,7 +432,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-在不考虑结点的键值的情况下,删除可以视为是节点之间的替换,基于这个思想，上述3种删除情景可以相互转换并且最终都是删除替代节点
+在不考虑结点的键值的情况下,删除可以视为节点间的替换,基于这个思想，上述3种删除情景可以相互转换并且最终都是删除替代节点
 
 ![](image.assets/红黑树删除.png)
 
@@ -462,11 +456,11 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 * 替换结点是其父的左子结点
   * 兄弟红->兄弟的父和子必黑![](image.assets/删除情景2.1.1.png)
-    * 父红,兄弟黑 -> 左旋 -> 后续平衡
+    * 父红,兄弟黑 -> 左旋
   * 兄弟黑
     * 兄弟右红，左任意      左子树将少一个黑,将父变黑加到左子树,兄弟代替父,兄弟右变黑![](image.assets/删除情景2.1.2.1.png)
-      * 兄变父颜色,父变黑,兄弟右变黑 -> 左旋 -> 进行后续平衡
-      * **左旋后看似不平衡,实际上R要参与替换的,去掉R就平衡了**,并且这里糅合了第一次替换和自底向上处理的情况，如果只考虑第一次替换的情况，根据红黑树性质，SL肯定是红色或为Nil。对于自底向上平衡，只需保证每棵子树都平衡,就能达到最终平衡
+      * 兄变父颜色,父/兄弟右变黑 -> 左旋
+      * **左旋后看似不平衡,实际上R要参与替换的,去掉R就平衡了**,并且这里糅合了第一次替换和自底向上处理的情况，如果只考虑第一次替换的情况，根据红黑树性质，SL肯定是红或Nil。对于自底向上平衡，只需保证每棵子树都平衡,就能达到最终平衡
     * 兄弟左红，右黑![](image.assets/删除情景2.1.2.2.png)
       * 兄弟变红,兄弟左黑 -> 右旋,进行兄弟右红的处理
     * 兄弟左右黑![](image.assets/删除情景2.1.2.3.png)
