--- a/软件设计师/计组原+操作系统.md
+++ b/软件设计师/计组原+操作系统.md
@@ -343,6 +343,60 @@ N = 尾数*基数^阶码
 
 
 
+![](image.assets/计算机体系结构.png)
+
+
+
+
+
+
+
+## 多核CPU/多级缓存
+
+
+
+
+
+![](image.assets/多核CPU结构.png)
+
+
+
+
+
+缓存分为3级,L3缓存被多个CPU共享
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 运算速度
+
+
+
+![](image.assets/运算速度.png)
+
+
+
+
+
+
+
+
+
 
 
 
