--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -112,7 +112,9 @@ ConcretePrototype具体原型类,实现具体的克隆方法
 
 
 
-### 饿汉单例
+### 饿汉
+
+
 
 在类**加载时创建**实例，而不是等到第一次请求实例时创建
 
@@ -120,7 +122,9 @@ ConcretePrototype具体原型类,实现具体的克隆方法
 
 
 
-### 懒汉单例
+### 懒汉
+
+
 
 在类加载的时候不创建单例实例，只有在第一次请求实例时创建
 
@@ -130,29 +134,19 @@ ConcretePrototype具体原型类,实现具体的克隆方法
 
 
 
-### 懒汉-双重检查锁
+### DCL 双重检查锁
+
+
+
+double check lock
 
 懒汉在第一次请求实例后创建了对象,就不会走singleton==null的判断了,也**不需要方法级别的锁**来保证它只被实例化一次
 
-可以**缩小锁的范围** 让getInstance方法不是同步方法	
+可以**缩小锁的范围** 让getInstance方法不是同步方法,**检查两次singleton==null,因为没有了方法级别的锁,线程a在进行加锁前后,可能就已经被b给实例化了**
 
-**双重检查是检查两次singleton==null,因为没有了方法级别的锁,线程a在进行加锁前后,可能就已经被b给实例化了**
+==静态全局变量必须加volatile==
 
-使用双重检查锁时,静态全局变量需要加上**volatile**
 
-实例化分为3个步骤
-
-* 分配内存
-* 初始化对象
-* 指向内存地址
-
-虚拟机会进行优化,**初始化对象和指向内存地址的顺序可能会调换**
-
-即	分配内存->指向地址	哪怕还没有进行实例化
-
-这将导致**线程a在进行第一个singleton==null时, true->加锁,再次判断singleton==null->分配内存->分配内存地址->实例化**
-
-在线程a进行分配内存地址时,线程b开始进行singleton==null,**此时singleton已经有内存地址**了,不为null,直接被return
 
 ```java
 public class LazySingleton {
