--- a/业务处理.md
+++ b/业务处理.md
@@ -196,6 +196,78 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+# CRM 客户关系管理
+
+
+
+
+
+
+
+
+
+ERP系统并没有很好地实现对[供应链](https://baike.baidu.com/item/供应链)下游（客户端）的管理
+
+
+
+CRM是选择和管理有价值客户及其关系的一种商业策略，要求以客户为中心的商业哲学和企业文化来支持有效的市场营销、销售与服务流程
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # 网关服务
 
 
