--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -535,7 +535,7 @@ K的个数称为阶,用M表示
 
 ![](image.assets/B树.jpg)
 
-* ==允许每个节点有更多子节点==
+* 每个结点至多有m个孩子(m>=2)
 * 按关键字递增排列，左小右大,关键字只出现在一个结点中
 * 根节点的子结点>=2
 * M/2（上取整）<=非叶节点的子结点数<=M ，且M>=2，空树除外（M阶代表查找路径，M=2是2叉）
