--- a/业务处理.md
+++ b/业务处理.md
@@ -212,6 +212,20 @@
 
 
 
+**SKU**	 StockKeepingUnit(库存量单位) 
+
+ 库存进出计量的单位，如：件、盒。现在SKU已经被引申为产品统一编号的简称，每种产品都有唯一的SKU号。对一种商品而言，当其品牌、型号、配置、等级、单位、生产日期、保质期、用途、价格、产地等与其他商品存在不同时，便可称为一个单品 
+
+
+
+**RFM模型**
+
+R：最近一次付款时间，距离当前的天数 （无论是否退款），代表客户的活跃度。R值离当前时间越近说明客户相对越活跃，越容易促其复购；
+
+F：指定时间周期内的付款次数，代表客户的忠诚度。F值越大说明客户对店铺越忠诚，这部分客户需重点维护但不要对其产生骚扰；
+
+M：指定时间周期内的付款金额，代表客户的贡献度。M值越大说明客户消费能力越高，对店铺贡献也越大。店铺要取得最大的利润离不开这部分客户
+
 
 
 
