--- a/软件设计师/计组原+操作系统.md
+++ b/软件设计师/计组原+操作系统.md
@@ -617,11 +617,19 @@ a++		1地址
 
 # 进程管理
 
+
+
 进程是程序在一个数据集合上运行的过程,系统进行**资源分配和调度的独立单位**
 
 由**程序块,进程控制块PCB,数据块**组成
 
 **进程是程序的一次执行过程**,程序是静态的,进程是动态的
+
+
+
+可执行程序是在磁盘上的文件,包含Cpu指令集
+
+当可执行程序被加载进内存,就成了进程
 
 
 
