--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1296,7 +1296,41 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
   
 
-### 队列缓冲区
+
+
+
+
+
+
+
+
+### 工作密取
+
+
+
+消费者:双端队列 = 1:1
+
+当消费者完成了自己双端队列中的全部工作，就可以从其他消费者的队尾秘密地获取工作
+
+消费者在需要访问其他队列时，**操作队尾而不是队头，进一步避免竞争**
+
+
+
+避免消费者阻塞
+
+
+
+
+
+### 工作共享
+
+
+
+在生产者发现新的任务,若自身队列已满,将新任务追加到其他线程队尾
+
+
+
+确保每个线程都处于忙碌状态
 
 
 
@@ -1343,6 +1377,14 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 **中介者模式应用在当事双方不方便或无能力直接联系的场合**
+
+
+
+
+
+
+
+
 
 
 
