--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -805,9 +805,21 @@ N:顶点数	(==MST有N-1条边==)
 
 只有最后一层的结点可以不满,且左满右不满
 
-堆分为两种：最大堆和最小堆，两者的差别在于节点的排序方式。
 
-在最大堆中，父节点的值比每一个子节点的值都要大。在最小堆中，父节点的值比每一个子节点的值都要小。这就是所谓的“堆属性”，并且这个属性对堆中的每一个节点都成立。
+
+![](image.assets/大根堆.png)
+
+**最大堆/大根堆**
+
+父节点的值比每一个子节点的值都要大
+
+**最小堆/小顶堆**
+
+父节点的值比每一个子节点的值都要小
+
+
+
+**最大/小属性只对堆中的父子节点成立** -> ==堆并不一定有序==
 
 
 
@@ -815,15 +827,15 @@ N:顶点数	(==MST有N-1条边==)
   * 节点顺序
     * 二叉搜索树中，左比父小，右比父大
     * 最大堆中两个子节点都比父节点小，最小堆中都比父节点大
-  * 内存占用。
-    * 树占用的内存大。需要存储左/右子节点指针
-    * 堆用数组，内存占用小
+  * 内存占用
+    * 树内存大,需要存储左/右子节点指针
+    * 堆用数组，内存小
   * 平衡
     * 二叉搜索树必须是“平衡”的情况下，复杂度才到O(log n)。你可以按任意顺序位置插入/删除数据，或者使用 AVL 树或者红黑树
     * ==堆中不需要整棵树都有序==。因为堆中数据的组织方式可以保证O(log n) 的性能
   * 搜索
     * 二叉树搜索快
-    * 堆中搜索慢。==堆更注重存储==
+    * 堆搜索慢,==更注重存储==
 
 
 
@@ -847,9 +859,7 @@ right(i) = 2i + 2
 
  
 
-堆并不一定是有序数组！要将堆转换成有序数组，需要使用堆排序。
 
-堆中低层节点不一定小于高层节点！![img](image.assets/clip_image006.jpg)7<8
 
 
 
@@ -896,6 +906,38 @@ remove() 的通用版本，它可能会使用到 shiftDown 和 shiftUp。
 -> [ 10, **1**, 2, 5, **7** ]   
 
 ==将待删除元素与最后的元素交换==,**removeLast()**删除,而1的位置不对,用shiftDown()调整位置
+
+
+
+
+
+
+
+## TopK
+
+
+
+从arr[1, n]这n个数中，找出最大的k个数
+
+
+
+1.排序	O(nlg(n))	只需要TopK,无需全局排序
+
+2.局部排序	O(nk)	冒泡,需要K个则冒泡K次(但还是把最大的K个元素排序了)
+
+3.堆	O(nlg(k)) (每次都入堆调整，每次调整lg(树高))	只找到TopK，不排序TopK
+
+
+
+![](image.assets/TOPK1.png)	![](image.assets/TOPK2.png)
+
+先用前k个元素生成小顶堆,再遍历后续元素，维护小顶堆
+
+最后堆顶元素即为TopK
+
+
+
+
 
 
 
