--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -15,7 +15,7 @@
 
 根据传入的参数，动态决定创建哪个产品子类的实例，**以父类形式返回**
 
-可以根据条件生成不同的子类实例，这些子类有一个公共的抽象父类并且实现了相同的方法，但是这些方法针对不同的数据进行了不同的操作（多态）。 当得到子类的实例后，开发人员可以调用基类中的方法而不必考虑到底返回的是哪一个 子类的实例
+可以根据条件生成不同的子类实例，这些子类有一个公共的抽象父类并且实现了相同的方法，但是这些方法针对不同的数据进行了不同的操作（多态）。 当得到子类的实例后，开发人员可以调用基类中的方法而不必考虑到底返回的是哪个子类的实例
 
 
 
@@ -33,7 +33,31 @@
 
 简单工厂用来生产**同一等级结构**中的任意产品（**不支持增加**产品）
 
-只有伦敦工厂，并且这个工厂只生产三种类型的pizza：chesse,pepper,greak（固定产品）。
+只有伦敦工厂，并且这个工厂只生产三种类型的pizza：chesse,pepper,greak（固定产品）
+
+
+
+### 静态工厂创建对象
+
+
+
+**优点**
+
+能够指定创建对象的方法名
+
+支持单例
+
+**可以返回原类型的任意子类** 多态
+
+
+
+**缺点**
+
+不能通过类名查找,难以发现
+
+
+
+
 
 
 
@@ -172,23 +196,23 @@ public class LazySingleton {
 
 
 
-## 生成器/建造者 Builder
+## Builder
 
 将一个复杂对象分解成多个相对简单的部分，然后根据不同需要分别创建它们，最后构建成该复杂对象。
 
 
 
 ```java
-    public static void main(String[] args) {
-		//复杂对象House下有若干子对象,为了创建house,一种方法是全写在构造器中,但这将使构造方法变得过于复杂
-      //另一种是用Builder来负责进行对象的创建
-        new House.HouseBuilder().window().door().build()    }
+public static void main(String[] args) {
+  new House.HouseBuilder().window().door().build();
+}
 
 @Data
 @Builder
 class House{
-    private Window window;
-    private Door door;}
+  private Window window;
+  private Door door;
+}
 ```
 
 
@@ -1475,34 +1499,6 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 对象间尽可能少的了解,不和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
 
 “低耦合”，门面模式和调停者模式就是对迪米特法则的践行
-
-
-
-
-
-# 面向对象的软件开发
-
-
-
-* 面向对象分析
-
-  * 抽取和整理用户需求并建立问题模型
-  * **认定对象、组织对象、描述对象间的相互作用、定义对象的操作、定义对象的内部信息**
-    * 认定对象：在应用领域中，按自然存在的实体确立对象
-    * 组织对象：分析对象间的关系，将相关对象抽象成类
-    * 描述对象间的相互作用：描述出各对象在应用系统中的关系
-
-* 面向对象设计
-
-采用协作的对象、对象的属性和方法说明软件解决方案的一种方式，强调定义软件对象和这些软件对象如何协作来满足需求，延续了面向对象分析
-
-* 面向对象实现
-
-釆用面向对象程序设计语言实现系统
-
-* 面向对象测试
-
-根据规范说明来验证系统设计的正确性
 
 
 
