--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -395,32 +395,33 @@ class Adapter implements Translator {
 ```java
 public class DecoratorPattern {
 
-    public static void main(String[] args) {
+  public static void main(String[] args) {
     //装饰器的构造方法传入了FirstRobot对象,为原对象附加了新功能
-        new RobotDecorator(new FirstRobot()).doMorething(); }}
+    new RobotDecorator(new FirstRobot()).doMorething(); }
+}
 
 //构件接口
 interface Robot { void doSomething();}
 
 //被装饰的构件
 class FirstRobot implements Robot {
-    @Override
-    public void doSomething() {  System.out.println("搬砖"); }
+  @Override
+  public void doSomething() {  System.out.println("搬砖"); }
 }
 
 //装饰器
 class RobotDecorator implements Robot {
 
-    private Robot robot;
-    public RobotDecorator(Robot robot) { this.robot = robot;}
+  private Robot robot;
+  public RobotDecorator(Robot robot) { this.robot = robot;}
 
-    @Override
-    public void doSomething() { robot.doSomething();}
+  @Override
+  public void doSomething() { robot.doSomething();}
 
-	//新方法	doSomething接口方法未被修改
-    public void doMorething() {
-        robot.doSomething();
-        System.out.println("搬水泥"); }}
+  //新方法	doSomething接口方法未被修改
+  public void doMorething() {
+    robot.doSomething();
+    System.out.println("搬水泥"); }}
 ```
 
 
@@ -451,7 +452,7 @@ public class FilterInputStream extends InputStream {
     public void close() throws IOException {  in.close();  }
 ```
 
-FilterInputStream什么事都不做 **,委托给内部的InputStream成员对象**
+FilterInputStream什么事都不做 **委托给内部的InputStream成员对象**
 
 
 
