--- a/面向对象.md
+++ b/面向对象.md
@@ -426,63 +426,49 @@ class RobotDecorator implements Robot {
 
 
 
-IO流大量运用装饰器模式,直接继承了InputStream的子类有
 
-* ByteArrayInputStream
-* FileInputStream
-* ObjectInputStream
-* PipedInputStream
-* StringBufferInputStream
-* ==FilterInputStream==
 
-![](image.assets/inputStream继承关系.png)
+### 装饰器模式
+
+
+
+- InputStream 抽象组件
+- FileInputStream 具体组件，提供了字节流输入操作
+- FilterInputStream 抽象装饰器。例如 BufferedInputStream 为 FileInputStream 提供缓存的功能
+
+
+
+![](image.assets/9709694b-db05-4cce-8d2f-1c8b09f4d921.png)
+
+
 
 FilterInputStream与其它子类不同
 
 ```java
 public class FilterInputStream extends InputStream {
 
-	//内部维护一个InputStream,调用InputStream的方法
-    protected volatile InputStream in;
+  //内部维护一个InputStream,调用InputStream的方法
+  protected volatile InputStream in;
 
-    protected FilterInputStream(InputStream in) { this.in = in;}
-    public int read() throws IOException { return in.read(); }
-    public int read(byte b[]) throws IOException { return read(b, 0, b.length); }
-    public int read(byte b[], int off, int len) throws IOException {  return in.read(b, off, len); }
-    public void close() throws IOException {  in.close();  }
+  protected FilterInputStream(InputStream in) { this.in = in;}
+  public int read() throws IOException { return in.read(); }
+  public int read(byte b[]) throws IOException { return read(b, 0, b.length); }
+  public int read(byte b[], int off, int len) throws IOException {  return in.read(b, off, len); }
+  public void close() throws IOException {  in.close();  }
 ```
 
 FilterInputStream什么事都不做 **委托给内部的InputStream成员对象**
 
 
 
-FilterInputStream的又有其子类，分别是：
-
-* BufferedInputStream
-* DataInputStream
-* LineNumberInputStream
-* PushbackInputStream
-
-
-
-其中BufferedInputStream
+实例化一个具有缓存功能的字节流对象时，只需要在 FileInputStream 对象上再套一层 BufferedInputStream 对象即可
 
 ```java
-public synchronized int read() throws IOException {
-//当pos>=count时，需要缓冲数据，调用fill()将缓冲区加满
-    if (pos >= count) {
-        fill();
-        if (pos >= count)
-            return -1;
-    }
-    return getBufIfOpen()[pos++] & 0xff;}
+FileInputStream fileInputStream = new FileInputStream(filePath);
+BufferedInputStream bufferedInputStream = new BufferedInputStream(fileInputStream);
 ```
 
-BufferedInputStream是装饰器，==为InputStream加上缓冲功能==,使得FileInputStream带有了缓冲功能
 
-```java
-new BufferedInputStream(new FileInputStream(new File("")));
-```
 
 
 
@@ -1776,6 +1762,711 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 * 借助抽象、接口，可以使得高层模块仅仅和接口耦合，而和实际的底层模块没有直接关联
 
  
+
+
+
+# 继承
+
+
+
+超类和子类 成员变量名称相同
+
+子类拥有父类对象所有的属性和方法（包括私有属性和私有方法），但是父类中的私有属性和方法子类是无法访问，**只是拥有**
+
+不会重写父类成员变量,**子类中将有两个相同名称的变量**
+
+==子类重写父类的方法，访问级别不允许低于父类== -> 里氏替换
+
+```java
+public class A {  
+  public int m = 1;  
+
+  public void view(){
+    System.out.println(this.m);
+  }  
+}  
+
+public class B extends A{  
+
+  public int m = 2;  
+
+  /**
+ *  @Override
+ *  public void view(){
+ *      System.out.println(this.m);		//2
+ *      System.out.println(super.m);	//1
+ *  }
+ */  
+
+  public static void main(String[] args) {
+    B b = new B();
+    b.view();		//1
+  }  
+}
+```
+
+
+
+==继承打破封装性==
+
+> 需求:继承HashSet实现新类,增加插入元素的计数的功能
+>
+> 
+>
+> 实现1:重写add和addAll,每加入一个元素计数+1,调用super.add/addAll
+>
+> 然而HashSet的addAll依赖于add进行实现,这将使得addAll进行了+2
+>
+> 
+>
+> 实现2:完全重写addAll,不依赖于super.add实现
+>
+> 这使得编程变得极为复杂
+
+哪怕不覆盖现有方法,也存在父类方法间互相调用而导致子类的实现有所差异
+
+子类将依赖于父类的特定功能的实现细节,当父类随着发行版本而变化,子类将必须随之改变
+
+
+
+## 复合
+
+将现有类变为新类的一个组件,完全不拓展现有类,而是在新类增加私有域去引用现有类的一个实例
+
+新类的每个方法都可以调用现有类的实现
+
+
+
+```java
+//继承
+public class CountSet<E> extends HashSet<E>{
+  private int count = 0;
+  public boolean add(E e) {
+    count++;
+    return super.add(e);
+  }
+}
+
+//复合
+public class CountSet<E> extends HashSet<E>{
+  private int count = 0;
+  HashSet s = new HashSet<>();
+  
+  public boolean add(E e) {
+    count++;
+    return s.add(e);
+  }
+}
+```
+
+
+
+只在真正是子类型,存在is-a关系时,才适合用继承
+
+每个B都是A么?	在大多数情况下,B只需包含A的一个私有实例,利用它的实现细节罢了
+
+
+
+在Java类库中,Stack并不是向量,却继承了向量Vector -> Vector废弃将导致Stack也废弃
+
+
+
+
+
+## 继承优于标签
+
+
+
+
+
+以标签区分类型,代码中将充斥着样板代码，包括枚举声明、标签域以及条件语句
+
+在标签过多时,也会加大bug的概率
+
+标签类完全可以转化为等价的继承关系
+
+```java
+public class Figure {
+  enum Shape {RECTANGLE, CIRCL}	//标签区分类型,决定用到的成员变量,area方法的计算方式
+  final Shape shape;
+	
+  double length;	//RECTANGLE专用
+  double width;
+
+  double radius;	//CIRCL专用
+
+  Figure(double radius) {
+    shape = Shape.CIRCL;
+    this.radius = radius;
+  }
+
+  public Figure(double length, double width) {
+    shape = Shape.RECTANGLE;
+    this.length = length;
+    this.width = width;
+  }
+
+  double area() {
+    switch (shape) {	//新增类型,构造器也需增加新的逻辑,否则运行失败
+      case CIRCL:
+        return Math.PI * (radius * radius);
+      case RECTANGLE:
+        return length * width;
+      default:
+        throw new AssertionError(shape);
+    }
+  }
+}
+```
+
+
+
+用继承改写后,带来了层级关系,去除了标签的冗余逻辑
+
+```java
+abstract class Figure {
+  abstract double area();	//公共的area()
+}
+
+class Cicle extends Figure {
+
+  final double radius;	//CIRCL类型对应(radius)
+
+  public Cicle(double radius) { this.radius = radius; }
+
+  @Override
+  double area() { return Math.PI * (radius * radius); }
+}
+```
+
+
+
+另外一点,子类的构造器也能反映与父类的关系
+
+```java
+class Square extends Recyangle {
+  Square(double side) {
+    super(side, side);
+  }
+}
+```
+
+
+
+
+
+## 永远打上Override
+
+
+
+[Object.equals](#equals)入参为Object,在子类往往因定义的入参不是Object,而导致仅仅重载equals
+
+
+
+打上@Override能利用编译器的检查,减少此类bug
+
+也能及时发现有@Override却没有重写方法
+
+
+
+## 重写
+
+
+
+1. 返回值类型、方法名、参数列表相同
+2. 抛出的异常<=父类异常，访问修饰符范围>=父类
+3. 如果父类方法访问修饰符为 `private/final/static` 则子类就不能重写该方法，但是被 static 修饰的方法能够被再次声明
+4. 构造方法无法被重写
+
+
+
+
+
+
+
+## 慎用重载
+
+
+
+```java
+String classify(Set<?> s) { return "Set"; }
+String classify(List<?> s) { return "List"; }
+String classify(Collection<?> s) { return "Collection"; }
+
+public void test() {
+  Collection<?>[] collections = {
+    new HashSet<>(),
+    new ArrayList<>(),
+    new HashMap<>().values()
+  };
+
+  for (Collection<?> c : collections) {
+    System.out.println(classify(c));	//输出Collection * 3
+  }
+}
+```
+
+
+
+==重载方法的类型在编译时决定,重写方法的类型在运行时决定== -> **重载方法的选择是静态的，被覆盖的方法的选择则是动态的**
+
+每次调用的对象类型不同,但这并不影响选择重载方法,因为对象在编译时的类型是确定的
+
+
+
+重写是标准规范,而重载机制是例外 -> 重写机制符合正常逻辑,在使用重载时可能引发无法理解的bug
+
+
+
+
+
+根本原因是重载入参的混淆性,父子类入参在重载时的调用不符合预期	一种方法是严格规定入参为绝不会混淆的类型
+
+**命名代替重载**
+
+[ObjectOutputStream.write](#ObjectOutputStream)对每种参数类型都有一种变形,但这些变形并不是重载 write，而是通过命名区分 writeBoolean()/writeInt()
+
+
+
+但构造器必定是重载的,无法命名,但可以通过静态工厂取代构造器
+
+
+
+自动拆箱装箱也会导致重载的混淆
+
+List.remove(Object)移除指定元素	List.remove(int)移除指定下标
+
+若为List<Integer>,删除时入参为int,以为会被自动装箱为Integer,实际调用的是List.remove(int),根据下标删除导致删除异常
+
+
+
+重载时需要留意:各个方法的逻辑大体一致,入参可以通过简单的类型转换就转发给不同的重载方法 -> 多种重载实际生效的只应该有一个
+
+
+
+
+
+# 接口
+
+
+
+
+
+## ~~常量接口~~
+
+constant interface
+
+
+
+==接口只用于定义类型==,常量接口是对接口的不良使用
+
+类内部的常量属于实现细节,类中常量的命名也将被接口类常量占用
+
+
+
+## 标记接口
+
+不包含方法声明的接口,只代表一个类实现了具有某种属性的接口
+
+```java
+实现Serializable意味着对象可以被ObjectOutputStream.writeObject()
+```
+
+
+
+标记接口相较于标记注解,能够提供类型的限制 -> 编译时IDE的类型提示
+
+
+
+
+
+## default 1.8+
+
+
+
+~~public~~ default
+
+
+
+抽象类更多的是提供一个模板，子类间流程大致相同，仅仅是某个步骤可能不一样（模板方法设计模式），这个时候使用抽象类，该可变步骤定义为抽象方法
+
+default直接提供了方法的实现,不需要修改实现类
+
+
+
+**default缺点**
+
+并非每一个实现类都需要default方法,新增defalut会带来历史子类的测试,不适配的子类必须重写default方法
+
+新增default方法后,子类并不会出现编译时的报错,但运行时可能因为新增方法而异常
+
+尽管default能够为所有子类新增一个已实现的方法,但这很可能会带来难以测试的bug
+
+
+
+## 静态方法 1.8+
+
+
+
+不会被实现类所实现,**只用于内部调用**
+
+
+
+两个接口定义**相同静态方法**，实现类实现这两个接口，并不会产生错误，编译器通过**反射**区分是哪个接口下的方法
+
+两个接口定义**相同非静态方法**，实现类实现了这两个接口，必须在实现类中重写默认方法
+
+
+
+## FunctionalInterface
+
+
+
+只在编译期起作用。编译期强制检查该接口是否符合函数式接口的条件，不符合则会报错
+
+* **只有一个抽象方法**
+* default属于默认实现，不属于抽象方法
+* 接口重写了Object的公共方法也不算入内
+
+![image-20200826214004498](image.assets/image-20200826214004498.png)
+
+
+
+### Supplier
+
+
+
+T get()	获取一个泛型参数指定类型的对象数据	**生产一个数据**
+
+```java
+public void testGetUser() {
+  User user = getUser(User::new);}
+
+private User getUser(Supplier<User> supplier) {
+  return supplier.get();}
+```
+
+ 
+
+Supplier求数组元素的最小值
+
+```java
+public void testGetMin(){
+  int[] arr={5,3,100,10};
+  int min = getMin(()->{
+    int minNum=arr[0];
+    for (int i : arr) {
+      if (i<minNum) minNum=i;}
+    return minNum;
+  });}
+
+private Integer getMin(Supplier<Integer> supplier) {
+  return supplier.get();
+}
+```
+
+ 
+
+### Consumer
+
+**与Supplier接口相反**，消费一个数据
+
+
+
+**抽象方法：accept**，消费一个指定泛型的数据
+
+```java
+public void testConsumer() {
+  User user = new User();
+  setUserDefaultSex(u -> u.setSex("nan"), user);	//user的sex被改变
+}
+private void setUserDefaultSex(Consumer<User> consumer, User user) {
+  consumer.accept(user);
+}
+```
+
+
+
+**默认方法：andThen**
+
+**方法的参数和返回值全都是 Consumer 类型**，那么就可以实现效果：消费数据的时候，首先做一个操作，然后再做一个操作，实现组合
+
+要想实现组合，需要两个或多个Lambda表达式
+
+```java
+public void testConsumer2() {
+  User user = new User();
+  setUserNameAndSex(u -> u.setSex("nan"), u -> u.setName("aa"), user);
+  System.out.println(user.getSex() + user.getName());}
+
+private void setUserNameAndSex(Consumer<User> one, Consumer<User> two, User user) {
+  one.andThen(two).accept(user);
+}
+```
+
+ 
+
+### BiConsumer
+
+
+
+```java
+void accept(T t, U u);	//接受2个入参的Consumer
+
+default BiConsumer<T, U> andThen(BiConsumer<? super T, ? super U> after) {
+  Objects.requireNonNull(after);
+
+  return (l, r) -> {
+    accept(l, r);
+    after.accept(l, r);
+  };
+}
+```
+
+
+
+
+
+### Predicate
+
+判断型接口，**得到boolean**结果
+
+**抽象方法：test** 	用于条件判断
+
+```
+public void testPredicate() {
+        longThan(s -> s.length() > 5, "hello!!");}
+
+    private void longThan(Predicate<String> predicate, String str) {
+        boolean flag = predicate.test(str);}
+```
+
+
+
+**默认方法：and** 
+
+**默认方法：or** 
+
+```
+public void testSuccess() {
+    successMan(s -> s.contains("富"), s -> s.contains("帅"), "高富帅");}
+
+private void successMan(Predicate<String> one, Predicate<String> two, String str) {
+    boolean flag = one.or(two).test(str);}
+```
+
+**默认方法：negate** 	取反
+
+
+
+```java
+public interface Predicate<T> {
+
+  boolean test(T t);
+
+  default Predicate<T> and(Predicate<? super T> other) {	//与
+    Objects.requireNonNull(other);
+    return (t) -> test(t) && other.test(t);
+  }
+
+  default Predicate<T> negate() {	//非
+    return (t) -> !test(t);
+  }
+
+  default Predicate<T> or(Predicate<? super T> other) {	//或
+    Objects.requireNonNull(other);
+    return (t) -> test(t) || other.test(t);
+  }
+
+  static <T> Predicate<T> isEqual(Object targetRef) {
+    return (null == targetRef) ? Objects::isNull : object -> targetRef.equals(object);
+  }
+}
+```
+
+
+
+
+
+
+
+### Function
+
+
+
+**抽象方法：apply** 
+
+java.util.function.Function<T,R>根据 T类型的参数得到 R类型的返回值
+
+```
+public void testFunction() {
+        Integer value = parseInteger(Integer::parseInt, "10");}
+
+    private Integer parseInteger(Function<String, Integer> function, String str) {
+        return function.apply(str);}
+```
+
+**默认方法：andThen**
+
+
+
+静态方法 identity
+
+```java
+static <T> Function<T, T> identity() {
+  return t -> t;	//返回入参本身
+}
+```
+
+
+
+
+
+## Lambda
+
+
+
+函数式编程思想,只关注做什么,不关注怎么做
+
+编译器通过类型推断得到参数的类型
+
+
+
+lambda表达式可以访问给它传递的变量，访问自己内外部的变量。但**只能访问外部final变量时**,即一旦定义后，在后面就不能再随意修改引用
+
+实例变量存在堆中，而局部变量存在栈，**lambda会在另一个线程中执行**。如果在线程中要直接访问一个局部变量，可能线程执行时该局部变量已经被销毁了，而 **final 类型的局部变量在 Lambda 表达式(匿名类) 中其实是局部变量的一个拷贝**
+
+[不可变则一定是线程安全的](#Immutable)
+
+
+
+==在lambda中，this不是指向lambda表达式产生的那个对象，而是声明它的外部对象==
+
+
+
+### 延迟执行
+
+
+
+先合并字符串,再判断level==1,决定要不要执行方法 
+
+```java
+public class Demo01Logger {
+    private static void log(int level, String msg) {
+        if (level == 1) {
+            System.out.println(msg);}}
+  
+    public static void main(String[] args) {
+        String msgA = "Hello";
+        String msgB = "World";
+        log(1, msgA + msgB);}}
+```
+
+
+
+优化后,先判断,后执行字符串合并
+
+```java
+@FunctionalInterface
+public interface MessageBuilder {
+    String buildMessage();
+}
+
+public class Demo02LoggerLambda {
+    private static void log(int level, MessageBuilder builder) {
+        if (level == 1) {
+            System.out.println(builder.buildMessage());}}
+
+    public static void main(String[] args) {
+        String msgA = "Hello";
+        String msgB = "World";
+        log(1, () -> msgA + msgB  );//避免字符串合并
+    }}
+```
+
+
+
+### 方法引用 ::
+
+如果Lambda要表达的函数方案已存在于某个方法的实现中，可以通过::来引用该方法
+
+* Lambda写法	 s -> System.out.println(s); 	拿到参数之后经Lambda之手，继而传递给 System.out.println 方法去处理
+
+* 方法引用写法	 System.out::println     直接让println 方法来取代Lambda
+
+* 对象名引用	user :: getName
+
+* 构造器引用	User::new
+
+* 类名引用		User::getName
+
+* super引用成员方法  super::sayHello
+
+* this引用	this::buyHouse
+
+
+
+
+
+## 接口 VS 抽象类的区别
+
+
+
+* 相同
+  * 抽象类和接口均包含抽象方法，类必须实现所有的抽象方法
+  * **都不能实例化**，位于继承树的顶端，用来被继承和实现
+  * 都不全为abstract,接口也可以有default
+
+* 不同
+  * 接口中只能定义全局静态常量，不能定义变量。抽象类中可以定义常量和变量
+  * **接口不能定义构造方法/成员变量**,抽象类中可以有构造方法，但不能用来实例化
+  * 单继承多接口
+  * 接口只能public,抽象可以自定义访问权限
+  * 接口是定义可选行为的最佳实践
+  * 接口可以在不通过增加层次结构的情况下拓展原有功能,结合装饰器模式,也能够安全地增强类的功能
+  * 在接口方法有了明显实现时,也可以用default完成实现
+
+ 
+
+接口负责定义类型/缺省方法,然后继承接口,形成骨架实现类 -> ==模板方法模式==
+
+骨架实现类与抽象类不同点在于:骨架实现类是为了继承而设计的,并非完全都是抽象,已将大部分功能完成了实现,甚至可以直接上手;当然也支持拓展功能的子类 与 子类带来的多态
+
+
+
+
+
+接口可以继承接口
+
+==抽象类可以实现接口==，抽象类可以继承实体类,可以有main方法
+
+
+
+==最主要区别还是设计理念==
+
+*  接口  接口定义“做什么”，实现类负责“怎么做”，功能和实现分离。**has-a **
+
+*  抽象类体现继承关系，父类是实现部分功能的“中间产品”，子类是“最终产品”。**is-a**
+
+
+
+本质上，**抽象类保护一个类不被实例化，或者允许一个类包含未实现的抽象方法。而接口仅暴露了必要的method,适合多态**
+
+
+
+## 重写 VS 重载
+
+
+
+重写（Override）	访问权限<=父类方法,返回值相同,异常类型为父类异常或异常的子类
+
+重载（Overload）	参数类型、个数、顺序至少一个不同
+
+
+
+构造方法只能重载,不能重写
+
+
 
 
 
