--- a/异常处理.md
+++ b/异常处理.md
@@ -1,4 +1,4 @@
-# 异常
+
 
 
 
@@ -10,9 +10,17 @@
 
 Exception能被程序本身处理，Error无法try-catch
 
-| Checked Exception                           | Unchecked Exception                   | Error              |
-| ------------------------------------------- | ------------------------------------- | ------------------ |
-| 强制调用方对该异常进行处理,否则不能编译通过 | **Runtime都为Unchecked**,编译器不检查 | 程序无法处理的错误 |
+| Checked Exception                     | Unchecked Exception                     |
+| ------------------------------------- | --------------------------------------- |
+| ==强制调用方进行处理==,否则编译不通过 | **Runtime都为Unchecked**,编译器不检查   |
+|                                       | Error也是Unchecked,但一般不受程序员控制 |
+
+
+
+[Optiona](#Optiona)解决Checked Exception,返回零长度的 optional代表异常的情况,但这种方法的缺点是，方法无
+法返回任何额外的信息，来详细说明它无法执行你想要的计算
+
+
 
 
 
