--- a/面向对象.md
+++ b/面向对象.md
@@ -667,32 +667,36 @@ class BikeFlyWeightFactory {
 
 ```java
 public class ProxyPattern {
-    public static void main(String[] args){
-        new RealSubjectProxy().doWork();  }}
+  public static void main(String[] args){
+    new RealSubjectProxy().doWork();  
+  }
+}
 
 interface Subject { void doWork();}
 
 class RealSubject implements Subject {
-    @Override
-    public void doWork() {
-        System.out.println("搬砖");  }}
+  @Override
+  public void doWork() {
+    System.out.println("搬砖");  }}
 
 //代理类
 class RealSubjectProxy implements Subject {
-    private RealSubject subject;
-    public RealSubjectProxy(){
-        //通过反射来加载类,从而让客户端无需传入参数
-     this.subject = (RealSubject) this.getClass().getClassLoader().loadClass("RealSubject").newInstance(); }
+  private RealSubject subject;
+  public RealSubjectProxy(){
+    //通过反射来加载类,从而让客户端无需传入参数
+    this.subject = (RealSubject) this.getClass().getClassLoader().loadClass("RealSubject").newInstance(); }
 
-    public void preMethod() { System.out.println("起床"); }
-    public void afterMethod() { System.out.println("睡觉"); }
+  public void preMethod() { System.out.println("起床"); }
+  public void afterMethod() { System.out.println("睡觉"); }
 
-//通过代理可以为doWork()方法附加上前置和后置操作,增强了方法
-    @Override
-    public void doWork() {
-        preMethod();
-        subject.doWork();
-        afterMethod();  }}
+  //通过代理可以为doWork()方法附加上前置和后置操作,增强了方法
+  @Override
+  public void doWork() {
+    preMethod();
+    subject.doWork();
+    afterMethod();  
+  }
+}
 ```
 
 
@@ -2239,12 +2243,12 @@ default BiConsumer<T, U> andThen(BiConsumer<? super T, ? super U> after) {
 
 **抽象方法：test** 	用于条件判断
 
-```
+```java
 public void testPredicate() {
-        longThan(s -> s.length() > 5, "hello!!");}
+  longThan(s -> s.length() > 5, "hello!!");}
 
-    private void longThan(Predicate<String> predicate, String str) {
-        boolean flag = predicate.test(str);}
+private void longThan(Predicate<String> predicate, String str) {
+  boolean flag = predicate.test(str);}
 ```
 
 
@@ -2304,12 +2308,12 @@ public interface Predicate<T> {
 
 java.util.function.Function<T,R>根据 T类型的参数得到 R类型的返回值
 
-```
+```java
 public void testFunction() {
-        Integer value = parseInteger(Integer::parseInt, "10");}
+  Integer value = parseInteger(Integer::parseInt, "10");}
 
-    private Integer parseInteger(Function<String, Integer> function, String str) {
-        return function.apply(str);}
+private Integer parseInteger(Function<String, Integer> function, String str) {
+  return function.apply(str);}
 ```
 
 **默认方法：andThen**
