--- a/面向对象.md
+++ b/面向对象.md
@@ -11,9 +11,7 @@
 
 ## 简单/静态工厂
 
-
-
-根据传入的参数，动态决定创建哪个产品子类的实例，**以父类形式返回**
+根据入参动态决定创建哪个产品子类的实例，**以父类形式返回**
 
 可以根据条件生成不同的子类实例，这些子类有一个公共的抽象父类并且实现了相同的方法，但是这些方法针对不同的数据进行了不同的操作（多态）。 当得到子类的实例后，开发人员可以调用基类中的方法而不必考虑到底返回的是哪个子类的实例
 
@@ -26,8 +24,8 @@
   * 客户端只负责对象的调用，实现了**创建和调用分离**，降低了客户端代码的难度
 
 * 缺点
-  * 工厂类需要知道产品类的具体实现细节,并决定何时实例化产品类.如果**增加和减少产品子类，需要修改工厂类**，违背了开闭原则
-  * 如果产品子类过多，会导致工厂类非常的庞大，违反了高内聚原则
+  * 工厂类需要知道产品类的具体实现细节,并决定何时实例化产品类.如果**增加和减少产品子类，需要修改工厂类**，违背开闭原则
+  * 如果产品子类过多，会导致工厂类庞大，违反了高内聚原则
 
 
 
@@ -63,11 +61,9 @@
 
 ## 工厂方法
 
-定义一个用于创建产品的接口，由子类决定生产什么产品	使类的实例化延迟到其子类
+定义一个用于创建产品的接口，由子类决定生产什么产品	**类的实例化延迟到子类**
 
-把必须要有的方法定义在工厂接口中
-
-![image-20200817103042675](image.assets/image-20200817103042675.png)
+![](image.assets/image-20200817103042675.png)
 
 
 
@@ -90,6 +86,38 @@ public interface Collection<E> extends Iterable<E> {
 工厂方法 ：用来生产同一等级结构中的固定产品。（支持拓展增加产品）
 
 现在不光有伦敦工厂，还增设了纽约工厂（仍然是同一等级结构，但是支持了产品的拓展），这两个工厂依然只生产三种类型的pizza：chesse,pepper,greak（固定产品）
+
+
+
+### Spring `ApplicationContext`
+
+Spring使用工厂模式可以通过 `BeanFactory` 或 `ApplicationContext` 创建 bean 对象。
+
+**两者对比：**
+
+-  `BeanFactory` ：延迟注入(使用到某个 bean 的时候才会注入),相比于`ApplicationContext` 来说会占用更少的内存，程序启动速度更快。
+
+- `ApplicationContext` ：容器启动的时一次性创建所有 bean。`BeanFactory` 仅提供了最基本的依赖注入支持，` ApplicationContext` 扩展了 `BeanFactory` 
+
+  
+
+1. `ClassPathXmlApplication`：把上下文文件当成类路径资源
+2. `FileSystemXmlApplication`：从文件系统中的 XML 文件载入上下文定义信息
+3. `XmlWebApplicationContext`：从Web系统中的XML文件载入上下文定义信息
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
