--- a/关键字+注解.md
+++ b/关键字+注解.md
@@ -211,3 +211,175 @@ switch ((s = string).hashCode()){
 
 
 
+# 注解
+
+
+
+
+
+## Lombok
+
+
+
+@EqualsAndHashCode
+
+默认使用非静态，非瞬态的属性
+
+参数exclude排除属性	参数of指定仅使用哪些属性
+
+默认callSuper=false	仅使用类中定义的属性,不调用父类属性和方法
+
+
+
+
+
+## @Mapper
+
+
+
+```java
+@Mapper(unmappedTargetPolicy = ReportingPolicy.ERROR) //unmappedTargetPolicy 对于未映射成功属性的警告策略
+public interface QwDeptConvert {
+
+  QwDeptConvert INSTANCE = Mappers.getMapper(QwDeptConvert.class);
+
+  @Mappings({ //映射策略
+    @Mapping(target = "id", ignore = true), //指定不需要映射的字段
+    @Mapping(source = "name", target = "customerName") //指定来源和目标
+  })
+  QwDept fromCreateQwDeptCmd(CreateQwDeptCmd command);
+
+  @Mappings({
+    @Mapping(target = "children", expression = "java( new java.util.ArrayList<com.darcytech.typhon.qywechat.qwdeptstaff.dto.QwDeptTreeDto>())")
+  })
+  QwDeptTreeDto toQwDeptTreeDto(QwDept qwDept);
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## JSON
+
+@JsonInclude(Include.NON_NULL) 是springmvc中的标注，剔除返回json中的null
+
+@JsonIgnore	忽略不想传给前台的的属性
+
+
+
+
+
+//将该标记放在属性上，如果该属性为NULL则不参与序列化 
+//如果放在类上边,那对这个类的全部属性起作用 
+//Include.Include.ALWAYS 默认 
+//Include.NON_DEFAULT 属性为默认值不序列化 
+//Include.NON_EMPTY 属性为 空（“”） 或者为 NULL 都不序列化 
+//Include.NON_NULL 属性为NULL 不序列化 
+
+
+
+
+
+
+
+
+
+
+
+## Junit注解
+
+@BeforeClass – 表示在类中的任意public static void方法执行之前执行
+
+@AfterClass – 表示在类中的任意public static void方法执行之后执行
+
+@Before – 表示在任意使用@Test注解标注的public void方法执行之前执行
+
+@After – 表示在任意使用@Test注解标注的public void方法执行之后执行
+
+@AfterRunning: 返回通知, 在方法返回结果之后执行
+
+@AfterThrowing: 异常通知, 在方法抛出异常之后
+
+@Around: 环绕通知, 围绕着方法执行
+
+ 
+
+
+
+
+
+## @Repeatable
+
+在没有`@Repeatable`注解的的注解中，在同一个地方使用相同的注解会报错，有了此元注解注解的注解，就可以在同一个地方使用相同的注解
+
+```java
+@Value("hello")
+@Value("world")
+public void test(String var1, String var2) {
+  System.out.println(var1 + " " + var2);
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
