--- a/面向对象.md
+++ b/面向对象.md
@@ -188,38 +188,26 @@ ConcretePrototype具体原型类,实现具体的克隆方法
 
 ### DCL 双重检查锁
 
-
-
-double check lock
-
-懒汉在第一次请求实例后创建了对象,就不会走singleton==null的判断了,也**不需要方法级别的锁**来保证它只被实例化一次
-
-可以**缩小锁的范围** 让getInstance方法不是同步方法,**检查两次singleton==null,因为没有了方法级别的锁,线程a在进行加锁前后,可能就已经被b给实例化了**
+double check lock 在自己被调用时才会实例化
 
 ==静态全局变量必须加volatile==
 
 
 
 ```java
-public class LazySingleton {
+private volatile static LazySingleton lazySingleton = null;
 
-    private volatile static LazySingleton lazySingleton = null;
+private LazySingleton() {}
 
-    private LazySingleton() {
+public static LazySingleton getInstance() {
+  if (lazySingleton == null) {
+    synchronized (LazySingleton.class) {
+      if (lazySingleton == null) {
+        lazySingleton = new LazySingleton();
+      }
     }
-
-    /**
-     * 懒汉在自己被调用时才会实例化
-     */
-    public static LazySingleton getInstance() {
-        if (lazySingleton == null) {
-            synchronized (LazySingleton.class) {
-                if (lazySingleton == null) {
-                    lazySingleton = new LazySingleton();
-                }
-            }
-        }
-        return lazySingleton; }}
+  }
+  return lazySingleton; }
 ```
 
 
@@ -2483,8 +2471,9 @@ public class Demo02LoggerLambda {
 ==最主要区别还是设计理念==
 
 *  接口  接口定义“做什么”，实现类负责“怎么做”，功能和实现分离。**has-a **
-
-*  抽象类体现继承关系，父类是实现部分功能的“中间产品”，子类是“最终产品”。**is-a**
+*  抽象类 **is-a**
+   *  鸟是一种动物 -> 抽象类
+   *  鸟会飞 -> 接口
 
 
 
