--- a/反射.md
+++ b/反射.md
@@ -1,6 +1,6 @@
 # 反射
 
-==通过堆中的class对象访问到方法区中class文件(反射)==
+==通过堆中的class对象访问到方法区中class文件== 即运行时动态获取类的方法
 
 **动态获取信息/调用对象方法**
 
@@ -31,13 +31,13 @@ Class类是反射的入口，用于获取与类相关的各种信息和方法
 
 ==获取class对象4种方式==
 
-类名.class
+1. 类名.class
 
-Class.forName("包名")
+2. Class.forName("包名")
 
-对象.getClass()
+3. 对象.getClass()
 
-类加载器.loadClass("包名")	类加载器获取class对象不会进行初始化,静态块和静态对象不会得到执行
+4. 类加载器.loadClass("包名")	类加载器获取class对象不会进行初始化,静态块和静态对象不会得到执行
 
 
 
