--- a/关键字+注解.md
+++ b/关键字+注解.md
@@ -56,7 +56,7 @@ protected方式继承的非private成员 	只有子类及子类的子类(非priv
 
 
 
-private方法会被隐式地指定为final
+==private方法会被隐式地指定为final==
 
 子类方法 和 基类private方法签名相同，则是在子类中定义了新方法,而不是重写
 
@@ -204,6 +204,12 @@ switch ((s = string).hashCode()){
 必须包含一个default语句并且放在最后
 
 
+
+## transient
+
+阻止变量被序列化；在反序列化时,赋默认值
+
+transient只能修饰变量
 
 
 
