--- a/反射.md
+++ b/反射.md
@@ -2,11 +2,19 @@
 
 ==通过堆中的class对象访问到方法区中class文件== 即运行时动态获取类的方法
 
-**动态获取信息/调用对象方法**
+**动态获取类信息/调用对象方法** 在运行时，对任意类，都能获取到这个类的所有属性和方法,对于任意对象，都能够调用它的任意方法和属性
 
-在运行时，对任意类，都能知道这个类的所有属性和方法,对于任意对象，都能够调用它的任意方法和属性
 
-**在运行过程中，操作对象**,提高程序扩展性和复用性，**解耦**
+
+运行时对象存在两种类型：编译时类型和运行时类型。编译时的类型由声明对象时实用的类型来决定，运行时的类型由实际赋值给对象的类型决定
+
+```java
+Person p=new Student(); //编译时类型Person，运行时类型Student
+```
+
+反射解决了程序如何调用运行时类型方法的问题
+
+
 
 
 
@@ -29,7 +37,7 @@ Class类是反射的入口，用于获取与类相关的各种信息和方法
 
 
 
-==获取class对象4种方式==
+==获取class对象4种方式== (反射的实现方式)
 
 1. 类名.class
 
@@ -53,7 +61,6 @@ Class类是反射的入口，用于获取与类相关的各种信息和方法
 | getSimpleName()                          | 获得类的名字                           |
 | getSuperclass()                          | 获得当前类继承的父类的名字             |
 | getInterfaces()                          | 获得当前类实现的类或是接口             |
-| .class                                   | 获取当前对象的类                       |
 |                                          |                                        |
 | isAnnotation()                           |                                        |
 | isArray()                                |                                        |
