--- a/异常处理.md
+++ b/异常处理.md
@@ -8,17 +8,11 @@
 
 
 
-Exception能被程序本身处理，Error无法try-catch
+* Exception是程序可以处理的异常,能被catch捕获
+  * Checked Exception  ==强制调用方进行处理==,否则编译不通过
+  * Unchecked Exception 编译器不检查,Runtime的都是为Unchecked
 
-| Checked Exception                     | Unchecked Exception                     |
-| ------------------------------------- | --------------------------------------- |
-| ==强制调用方进行处理==,否则编译不通过 | **Runtime都为Unchecked**,编译器不检查   |
-|                                       | Error也是Unchecked,但一般不受程序员控制 |
-
-
-
-[Optiona](#Optiona)解决Checked Exception,返回零长度的 optional代表异常的情况,但这种方法的缺点是，方法无
-法返回任何额外的信息，来详细说明它无法执行你想要的计算
+* Error是程序无法处理的错误
 
 
 
@@ -32,108 +26,17 @@ Exception能被程序本身处理，Error无法try-catch
 
 
 
-避免对异常捕获但不作任何处理,只在能处理异常时才进行捕获,否则延迟
-
-对catch的异常不作处理的话,注释写明不处理原因的
-
-当catch的异常被命名为expected, 此异常是被期望的且类型正确，此时可以在不作注释的情况下不处理异常
+finally不会执行的场景: 线程死亡,cpu被关闭,虚拟机被终止
 
 
 
 ## try-with-resources
 
-
-
-1. **适用范围**任何实现 `AutoCloseable`/`Closeable` 的对象
-2. **关闭资源和 finally 块的执行顺序：**在 `try-with-resources` 语句中，任何 catch 或 finally 块在声明的资源关闭后运行
-
-
-
-面对必须要关闭的资源，应优先使用 `try-with-resources`
-
-```java
-//try-catch
-Scanner scanner = null;
-try {
-  scanner = new Scanner(new File("D://read.txt"));
-  while (scanner.hasNext()) {
-    System.out.println(scanner.nextLine());
-  }
-} catch (FileNotFoundException e) {
-  e.printStackTrace();
-} finally {
-  if (scanner != null) {
-    scanner.close();
-  }
-}
-
-//用try-with-resources改造
-try (Scanner scanner = new Scanner(new File("test.txt"))) {
-  while (scanner.hasNext()) {
-    System.out.println(scanner.nextLine());
-  }
-} catch (FileNotFoundException fnfe) {
-  fnfe.printStackTrace();
-}
-```
-
-
-
-通过使用;分隔，可以在`try-with-resources`块中声明多个资源
-
-```java
-try (BufferedInputStream bin = new BufferedInputStream(new FileInputStream(new File("test.txt")));
-     BufferedOutputStream bout = new BufferedOutputStream(new FileOutputStream(new File("out.txt")))) {
-  int b;
-  while ((b = bin.read()) != -1) {
-    bout.write(b);
-  }
-}
-catch (IOException e) {
-  e.printStackTrace();
-}
-```
+**关闭资源和 finally 块的执行顺序：**在 `try-with-resources` 语句中，任何 catch 或 finally 块在声明的资源关闭后运行
 
 
 
 
-
-
-
-
-
-## CheckedException
-
-
-
-在编写代码时无法确定调用方的文件是否存在,此类CheckedException应用在运行时无法避免,只能通过强制软件开发人员在编写代码的时候就考虑对这些无法避免的情况的处理
-
-
-
-```java
-public FileReader(String fileName) throws FileNotFoundException {
-  super(new FileInputStream(fileName));
-}
-```
-
-
-
-缺点
-
-* 将Checked Exception向上传递throws ,将导致异常不断地向上传递,降低代码质量,在异常向上传递的同时也会模糊异常原本的含义,让上层调用者无法得知异常的原因与处理方式,要**避免二次throw异常**
-* 对于频繁被调用的API,每处调用都需要用 try catch 截获该异常 ,会污染代码
-
-
-
-
-
-Checked Exception只在异常情况对于API以及API的使用者都无法避免的情况下被使用 ,这也是API设计中的一部分。在调用的时候，必须处理此异常 
-
-例如在打开一个文件的时候，API以及API的使用者都没有办法保证该文件一定存在。反过来，在通过索引访问数据的时候，如果API的使用者对参数index传入的是-1，那么这就是一个代码上的错误，是完全可以避免的。因此对于index参数值不对的情况，我们应该使用Unchecked Exception 
-
-Checked Exception不应该被广泛调用的API所抛出。这一方面是基于代码整洁性的考虑，另一方面则是因为Checked Exception本身的实际意义是API以及API的使用者都无法避免的情况。如果一个应用有太多处这种“无法避免的异常”，那么这个程序是否拥有足够的质量也是一个很值得考虑的问题。而就API提供者而言，在一个主要的被广泛使用的功能上抛出这种异常，也是对其自身API的一种否定。
-
-Checked Exception应该有明确的意义。这种明确意义的标准则是需要让API使用者能够看到这个Checked Exception所对应的异常类，该异常类所包含的各个域，并阅读相应的API文档以后就能够了解到底哪里出现了问题，进而向用户提供准确的有关该异常的解释
 
 
 
