--- a/面试.md
+++ b/面试.md
@@ -1,3 +1,72 @@
+# 华曙数字科技
+
+原材料检测,养护检测,水运码头检测, 交通工程试验检测
+
+智慧高速,智慧园区,智慧物流等应用场景
+
+
+
+
+
+## 负载均衡
+
+1. nginx配置`upstream`, 默认是时间片轮循,也可以ip_hash,指定每台机器的访问权重
+
+2. 服务注册到Nacos,配置每台机器的权重
+3. 数据库做读写分离
+
+
+
+## 消息总线
+
+Spring Cloud Bus, 配合 Spring Cloud Config 使用可以实现配置的动态刷新
+
+
+
+跟kafka有一个对应的stater, spring-cloud-starter-bus-kafka
+
+
+
+## redis
+
+
+
+### 指令
+
+
+
+### mysql
+
+
+
+
+
+## spring
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # 电子口岸
 
 
@@ -206,7 +275,7 @@ bi系统 商业智能 数据 报表 可视化图标
 
 我叫励轩,今年23岁,毕业于江西师范大学软件工程专业.应聘的是java工程师的岗位.
 
-编程是我一直以来的梦想. 为此我在实习和工作中不断积累项目经验,最近参与了一个电商团队,从零到有开发了一款客户管理的系统, 我之前了解到贵公司的业务是针对 xxx ,我认为在技术栈和工作职责这两方面, 与我的匹配度很高. 希望能够加入你们的团队,以便将我所学的知识应用到贵公司的项目中,同时提高我个人的技术水平,谢谢
+编程是我一直以来的梦想. 为此我在实习和工作中已经积累了两年的项目经验,并且取得了软件设计师中级的证书. 我了解到贵公司的业务是针对 高速公路、智慧园区等应用场景, 我认为在技术栈和工作职责这两方面, 与我的匹配度很高. 希望能够加入你们的团队,以便将我所学的知识应用到贵公司的项目中,同时提高我个人的技术水平,谢谢
 
 
 
@@ -254,7 +323,7 @@ bi系统 商业智能 数据 报表 可视化图标
 
 
 
-# 与各端的配合
+
 
 
 
@@ -265,24 +334,12 @@ bi系统 商业智能 数据 报表 可视化图标
 2. 学习能力比较强,能够快速地熟悉业务, 减少公司的培训成本
 3. 
 
-3、资源价值：我之前的工作也是这方面的，所以在人脉、信息、渠道积累了一定资源，可以给公司业务提供更大的赋能
-
 
 
 # 如何看待项目合作
 
 1. 软件开发是很复杂的,往往会遇到一个人的智慧和力量不够的场景. 这时候通过团队的方式可以将大的工作量平摊到多个人头上, 减少个人的压力
 2. 团队成员的互补. 人各有所长,作为软件研发,我对代码的编写能力是有自信的,但让研发去测试自己编写的代码, 往往会出现遗漏而导致bug. 但专注于测试的人员, 能够运用到测试相关的专业知识, 测出我们研发根本预想不到的问题. 正因为每个人擅长的技能不同, 我们才需要组成一个团队, 共同推动项目的发展
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -305,18 +362,6 @@ bi系统 商业智能 数据 报表 可视化图标
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-入职后8月的五险一金能不能帮我叫上
 
 
 
