--- a/面向对象.md
+++ b/面向对象.md
@@ -755,6 +755,12 @@ class RealSubjectProxy implements Subject {
 
 
 
+
+
+
+
+
+
 # 行为型
 
 
@@ -1739,6 +1745,14 @@ public static class AbortPolicy implements RejectedExecutionHandler {
   * 强制多态	编译程序通过语义操作,把操作对象的类型强新变化(casting)
 
 
+
+## 动态代理和多态
+
+多态通常可以分为两种：编译时多态和运行时多态。Java的重载是编译时多态,重写是运行时多态
+
+编译时多态指的就是函数名相同，但是参数列表不同
+
+运行时多态则是指虚函数的多态，父类和子类、不同子类的实现不一样
 
 
 
