--- a/软考/计算机网络.md
+++ b/软考/计算机网络.md
@@ -1440,78 +1440,40 @@ HTTPS的报文摘要比HTTP更为安全,因为结合了加密/认证两个操作
 
 
 
-#### GET 和 POST 比较
+#### GET VS POST
+
+GET 用于获取资源，而POST用于传输实体主体
+
+**二者都可以将参数放在url或body中**,但不能因为post通常将参数放在body中就认为它的安全性更高,对于抓包工具来说参数放在哪个位置都是能被获取到的
 
 
 
-GET 用于获取资源，而 POST 用于传输实体主体
+|                | GET                           | POST                                                         |
+| -------------- | ----------------------------- | ------------------------------------------------------------ |
+| 编码           | ==URL只支持ASCII码==          | body支持标准字符集                                           |
+| 幂等性         | √ (包括HEAD，PUT 和 DELETE)   | ×                                                            |
+| 缓存           | 浏览器主动缓存                | 不缓存,除非响应报文Cache-Control 首部字段指定进行缓存        |
+| 浏览器历史记录 | 历史记录里保留url完整请求参数 | 不保留body参数                                               |
+| 参数长度       | url请求参数一般最长2k字节     | body无限制                                                   |
+|                | header和data一起发送          | ==两次请求==: 浏览器先发送header，服务器响应100 continue，浏览器再发送data (Firefox除外) |
 
-##### 参数
+**post为什么要分两次请求**
 
-GET 和 POST 的请求都能使用额外的参数，但是 GET 的参数是以查询字符串出现在 URL 中，而 POST 的参数存储在实体主体中。不能因为 POST 参数存储在实体主体中就认为它的安全性更高，因为照样可以通过一些抓包工具（Fiddler）查看。
+网络通顺时，多一次请求的延时基本可以忽略不计
 
-因为 URL 只支持 ASCII 码，因此 GET 的参数中如果存在中文等字符就需要先进行编码。例如 `中文` 会转换为 `%E4%B8%AD%E6%96%87`，而空格会转换为 `%20`。POST 参数支持标准字符集。
+网络阻塞时，两次包的TCP有助于验证数据包完整性
 
-```
-GET /test/demo_form.asp?name1=value1&name2=value2 HTTP/1.1
-```
 
-```
-POST /test/demo_form.asp HTTP/1.1
-Host: w3schools.com
-name1=value1&name2=value2
-```
 
-##### 安全
 
-安全的 HTTP 方法不会改变服务器状态，也就是说它只是可读的。
 
-GET 方法是安全的，而 POST 却不是，因为 POST 的目的是传送实体主体内容，这个内容可能是用户上传的表单数据，上传成功之后，服务器可能把这个数据存储到数据库中，因此状态也就发生了改变。
+**从传输层的角度来说,get和post都是基于的TCP收发报文,二者并没有区别**
 
-安全的方法除了 GET 之外还有：HEAD、OPTIONS。
+从**应用层**的角度来说,不同的浏览器/服务器对HTTP进行了规范,例如浏览器通常会将url长度限制在2k字节内,部分浏览器在进行get请求时,不会携带request body等等
 
-不安全的方法除了 POST 之外还有 PUT、DELETE。
 
-##### 幂等性
 
-幂等的 HTTP 方法，同样的请求被执行一次与连续执行多次的效果是一样的，服务器的状态也是一样的。换句话说就是，幂等方法不应该具有副作用（统计用途除外）。
 
-所有的安全方法也都是幂等的。
-
-在正确实现的条件下，GET，HEAD，PUT 和 DELETE 等方法都是幂等的，而 POST 方法不是。
-
-GET /pageX HTTP/1.1 是幂等的，连续调用多次，客户端接收到的结果都是一样的：
-
-```
-GET /pageX HTTP/1.1
-GET /pageX HTTP/1.1
-GET /pageX HTTP/1.1
-GET /pageX HTTP/1.1
-```
-
-POST /add_row HTTP/1.1 不是幂等的，如果调用多次，就会增加多行记录：
-
-```
-POST /add_row HTTP/1.1   -> Adds a 1nd row
-POST /add_row HTTP/1.1   -> Adds a 2nd row
-POST /add_row HTTP/1.1   -> Adds a 3rd row
-```
-
-DELETE /idX/delete HTTP/1.1 是幂等的，即使不同的请求接收到的状态码不一样：
-
-```
-DELETE /idX/delete HTTP/1.1   -> Returns 200 if idX exists
-DELETE /idX/delete HTTP/1.1   -> Returns 404 as it just got deleted
-DELETE /idX/delete HTTP/1.1   -> Returns 404
-```
-
-##### 可缓存
-
-如果要对响应进行缓存，需要满足以下条件：
-
-- 请求报文的 HTTP 方法本身是可缓存的，包括 GET 和 HEAD，但是 PUT 和 DELETE 不可缓存，POST 在多数情况下不可缓存的。
-- 响应报文的状态码是可缓存的，包括：200, 203, 204, 206, 300, 301, 404, 405, 410, 414, and 501。
-- 响应报文的 Cache-Control 首部字段没有指定不进行缓存。
 
 ##### XMLHttpRequest
 
