--- a/面向对象.md
+++ b/面向对象.md
@@ -2453,30 +2453,25 @@ public class Demo02LoggerLambda {
 
 
 * 相同
-  * 抽象类和接口均包含抽象方法，类必须实现所有的抽象方法
   * **都不能实例化**，位于继承树的顶端，用来被继承和实现
   * 都不全为abstract,接口也可以有default
 
 * 不同
   * 接口中只能定义全局静态常量，不能定义变量。抽象类中可以定义常量和变量
   * **接口不能定义构造方法/成员变量**,抽象类中可以有构造方法，但不能用来实例化
-  * 单继承多接口
-  * 接口只能public,抽象可以自定义访问权限
-  * 接口是定义可选行为的最佳实践
-  * 接口可以在不通过增加层次结构的情况下拓展原有功能,结合装饰器模式,也能够安全地增强类的功能
-  * 在接口方法有了明显实现时,也可以用default完成实现
+  * ==单继承多接口==
 
  
 
 接口负责定义类型/缺省方法,然后继承接口,形成骨架实现类 -> ==模板方法模式==
 
-骨架实现类与抽象类不同点在于:骨架实现类是为了继承而设计的,并非完全都是抽象,已将大部分功能完成了实现,甚至可以直接上手;当然也支持拓展功能的子类 与 子类带来的多态
+骨架实现类与抽象类不同点在于:骨架实现类是为了继承而设计的,并非完全都是抽象,已将大部分功能完成了实现,甚至可以直接上手
 
 
 
 
 
-接口可以继承接口
+**接口可以继承接口**
 
 ==抽象类可以实现接口==，抽象类可以继承实体类,可以有main方法
 
@@ -2484,8 +2479,8 @@ public class Demo02LoggerLambda {
 
 ==最主要区别还是设计理念==
 
-*  接口  接口定义“做什么”，实现类负责“怎么做”，功能和实现分离。**has-a **
-*  抽象类 **is-a**
+*  接口  接口定义“做什么”，实现类负责“怎么做”,是一种**自上向下**的设计。**has-a **
+*  抽象类 **is-a**  抽象类是将子类的共有特性进行抽象,是**自下向上**的设计
    *  鸟是一种动物 -> 抽象类
    *  鸟会飞 -> 接口
 
