--- a/软考/计算机网络.md
+++ b/软考/计算机网络.md
@@ -2462,6 +2462,22 @@ IP = {\< 网络号 \>, \< 主机号 \>}
 
 
 
+#### MTU 最大传输单元
+
+Maximum transmission unit
+
+MTU↑ -> 额外开销↑，MTU↓ -> 网络延迟↓
+
+每个物理设备都有自己的 MTU，两个主机之间的 MTU由整个链路上 MTU 最小的物理设备决定
+
+
+
+以太网对数据帧的限制一般都是 1500 字节，在一般情况下，IP 主机的路径 MTU 都是 1500，去掉 IP 首部的 20 字节，如果待传输的数据(包括传输层协议的头部)**大于 1480 节，那么该 IP 协议就会将数据包分片传输**
+
+
+
+
+
 
 
 #### IP VS MAC
