--- a/软考/计算机网络.md
+++ b/软考/计算机网络.md
@@ -2248,6 +2248,12 @@ User Datagram Protocol	用户数据报协议
 
 
 
+UDP的优势是对带宽的利用, 早期互联网的特点是接入带宽很窄而且抖动频繁. TCP因为拥塞控制、保证有序等原因, 在网络不通畅的情况下对带宽的利用率很低, 甚至会主动断掉socket后重新握手建立链接. 另外, TCP的报文比较大, 也会在当时的网络环境中产生拥堵问题
+
+总结来说, 在**网络环境差到一定程度后，TCP的优势反而会成为劣势**
+
+UDP能够在应用层比TCP更快地探测和重传，一旦超过一定的时间没有收到回复，客户端可以选择马上重试或者换一个IP:PORT重试，在服务器端则可以果断地断掉[socket](https://www.zhihu.com/search?q=socket&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra={"sourceType"%3A"answer"%2C"sourceId"%3A85286488})。而可以应用UDP的时候，往往是在应用层上做到了面向连接的特性。甚至在消息幂等的情况下，客户端可以无脑地进行重传，这样就可以**尽可能地降低网络抖动的影响**，同时也可以**尽可能地利用整个带宽**
+
 
 
 
@@ -2255,8 +2261,6 @@ User Datagram Protocol	用户数据报协议
 ### 可靠数据传输原理
 
 下层协议可能不可靠,这为Tcp实现可靠性带来了困难
-
-
 
 1. 应用数据被分割成 TCP 认为最适合发送的数据块
 2. TCP 给发送的每一个包进行编号，接收方对数据包进行排序，把有序数据传送给应用层。 
