--- a/面向对象.md
+++ b/面向对象.md
@@ -1,3 +1,11 @@
+面向过程:	先确定如何操作数据, 再决定数据结构
+
+面向对象:	先确定数据结构, 在考虑操作数据的方法
+
+
+
+**23种设计模式**
+
 |          | 创建型模式            |             结构型模式             | 行为型模式                                         |
 | -------- | --------------------- | :--------------------------------: | -------------------------------------------------- |
 | 类模式   | 工厂方法              |                适配                | 模板方法 解释器                                    |
